validation fixes and tests